# mathjson2qubo

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: package-maintainance.yml  python-package.yml  test.yml
mathjson2qubo/: __init__.py  errors.py  model.py  parser.py  parser_exeptions.py
tests/: test_mathjson2qubo.py
