[tool.poetry]
name = "mathjson2qubo"
version = "0.1.0"
description = ""
authors = ["Yosuke Mukasa"]

[tool.poetry.dependencies]
python = "^3.8"
pyqubo = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
mamba = "^0.11.0"
expects = "^0.9.0"
isort = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
