[tool.poetry]
name = "mathjson2qubo"
version = "0.1.1"
description = "mathjson2qubo allows you to convert MathJSON into PyQUBO model."
authors = ["Yosuke Mukasa"]
repository = "https://github.com/mks1412/mathjson2qubo"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
pyqubo = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
mamba = "^0.11.0"
expects = "^0.9.0"
isort = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
